fix!: require setting of service port name
The service port in `{{- $svcPort := .Values.service.port -}}` does not exist
anymore since 4.0.0.

Therefore, the `port.number` for ingresses was empty. As enabling the specification
of multiple ports requires the specification of ports on the ingress, this is now
required in the chart.

BREAKING CHANGE: You must now set ingress.hosts[*].paths[*].servicePortName.

--- a/charts/generic/templates/ingress.yaml
+++ b/charts/generic/templates/ingress.yaml
@@ -1,10 +1,8 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "generic.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ include "generic.fullname" . }}
   labels:
     {{- include "generic.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
@@ -32,19 +30,12 @@ spec:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
-            {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
             pathType: ImplementationSpecific
-            {{- end }}
             backend:
-              {{- if $.Capabilities.APIVersions.Has "networking.k8s.io/v1" }}
               service:
-                name: {{ $fullName }}
+                name: {{ include "generic.fullname" $ }}
                 port:
-                  number: {{ $svcPort }}
-              {{- else }}
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
-              {{- end }}
+                  name: {{ .servicePortName }}
           {{- end }}
     {{- end }}
   {{- end }}
