--- a/renovate.json
+++ b/renovate.json
@@ -15,6 +15,11 @@
       "matchUpdateTypes": ["minor", "patch"],
       "matchManagers": ["regex"],
       "matchPaths": ["(^workflow-templates|\\.github/workflows)/[^/]+\\.ya?ml$"]
+    },
+    {
+      "description": "Automerge all kube-prometheus-stack updates for the CRD chart",
+      "matchPackageNames": ["kube-prometheus-stack"],
+      "automerge": true
     }
   ],
   "regexManagers": [
