chore!: drop support for Kubernetes <1.21 in backup chart

--- a/charts/backup/templates/cronjob-backup.yaml
+++ b/charts/backup/templates/cronjob-backup.yaml
@@ -1,4 +1,4 @@
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ include "backup.fullname" . }}
@@ -118,4 +118,3 @@ spec:
           {{- if .Values.backupJob.additionalVolumes }}
             {{- toYaml .Values.backupJob.additionalVolumes | nindent 12 }}
           {{- end }}
-
