feat(generic): allow additional labels for the ingress resource

--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -127,6 +127,8 @@ ingress:
   # -- The ingressClassName for this Ingress resource
   className: ~
   annotations: {}
+  # -- Additional labels for the ingress resource
+  additionalLabels: {}
 
   hosts:
       # -- host name to listen to
