fix: restartPolicy must be Never
The restartPolicy for the pods must be Never so that the Job controller
creates a new Pod when there is a fail.

With OnFailure, the Job controller deletes the Pod and the Job is failed,
with no chance to debug the failed Pod.

--- a/charts/backup/templates/cronjob-backup.yaml
+++ b/charts/backup/templates/cronjob-backup.yaml
@@ -84,7 +84,7 @@ spec:
             {{- if .Values.backupJob.backup.additionalVolumeMounts }}
               {{- toYaml .Values.backupJob.backup.additionalVolumeMounts | nindent 14 }}
             {{- end }}
-          restartPolicy: {{ .Values.backupJob.restartPolicy }}
+          restartPolicy: Never
           {{- with .Values.backupJob.nodeSelector }}
           nodeSelector:
             {{- toYaml . | nindent 12 }}
