--- a/charts/backup/templates/cronjob-cleanup.yaml
+++ b/charts/backup/templates/cronjob-cleanup.yaml
@@ -45,7 +45,7 @@ spec:
             resources:
               {{- toYaml . | nindent 14 }}
             {{- end }}
-            {{- if or .Values.cleanupJob.additionalVolumeMounts .Values.sftpConfig.knownHosts .Values.sftpConfig.privateKeys.existingSecret}}
+            {{- if or .Values.sftpConfig.knownHosts .Values.sftpConfig.privateKeys.existingSecret}}
             volumeMounts:
             {{- if .Values.sftpConfig.knownHosts }}
               - mountPath: "/etc/ssh/ssh_known_hosts"
@@ -55,9 +55,6 @@ spec:
             {{- if .Values.sftpConfig.privateKeys.existingSecret }}
               - mountPath: "/root/.ssh"
                 name: sftp-private-keys
-            {{- end }}
-            {{- if .Values.cleanupJob.additionalVolumeMounts }}
-              {{- toYaml .Values.cleanupJob.additionalVolumeMounts | nindent 14 }}
             {{- end }}
             {{- end }}
           containers:
