--- a/charts/generic/templates/deployment.yaml
+++ b/charts/generic/templates/deployment.yaml
@@ -31,7 +31,11 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
-      labels: {{- include "generic.selectorLabels" . | nindent 8 }}
+      labels:
+        {{- include "generic.selectorLabels" . | nindent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       restartPolicy: {{ .Values.restartPolicy }}
       {{- with .Values.imagePullSecrets }}
