--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -26,7 +26,11 @@ serviceAccount:
   # -- The name of the service account to use. If not set and create is true, a name is generated using the fullname template.
   name: ""
 
+# -- annotations to set for the Pods
 podAnnotations: {}
+
+# -- labels to add to the Pods
+podLabels: {}
 
 podSecurityContext: {}
 
