--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,11 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "platformAutomerge": true,
   "pre-commit": {
     "enabled": true
   },
+  "reviewers": ["morremeyer", "ekeih"],
   "packageRules": [
     {
       "description": "Automatically upgrade some dependencies",
