--- a/.github/workflows/update-kube-prometheus-stack-crds.yml
+++ b/.github/workflows/update-kube-prometheus-stack-crds.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Get current chart version
         id: chart_version
         run: |
-          echo "::set-output name=CHECKOUT_REF::$(sed '/^version:/!d;s/version: //' charts/kube-prometheus-stack-crds/Chart.yaml)"
+          echo "CHECKOUT_REF=$(sed '/^version:/!d;s/version: //' charts/kube-prometheus-stack-crds/Chart.yaml)" >> $GITHUB_OUTPUT
 
       - name: Check out prometheus-community/helm-charts
         uses: actions/checkout@v3.3.0
