fix: missing capture for hetznercloud/hcloud-cloud-controller-manager in renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -35,7 +35,7 @@
     },
     {
       "matchPackageNames": ["hetznercloud/hcloud-cloud-controller-manager"],
-      "extractVersion": "^v(?<version>)"
+      "extractVersion": "^v(?<version>.*)$"
     }
   ],
   "regexManagers": [
