--- a/charts/generic/templates/deployment.yaml
+++ b/charts/generic/templates/deployment.yaml
@@ -77,6 +77,9 @@ spec:
           {{- with .Values.args }}
           args: {{ toYaml . | nindent 12 }}
           {{- end }}
+          {{- with .Values.envFrom }}
+          envFrom: {{ toYaml . | nindent 12 }}
+          {{- end }}
           {{- if or .Values.env .Values.envValueFrom }}
           env:
             {{- range $key, $value := .Values.envValueFrom }}
