--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -198,3 +198,13 @@ additionalPreferredPodAntiAffinity: {}
 
 # -- Additional affinity terms. **Do not** specify PodAntiAffinities with preferredDuringSchedulingIgnoredDuringExecution here, these go to `additionalPreferredPodAntiAffinity`. All `requiredDuringScheduling` affinities need to be defined here.
 affinity: {}
+
+podDisruptionBudget:
+  # -- Deploy a PodDisruptionBudget
+  enabled: false
+
+  # -- How many pods need to be available, minimum
+  minAvailable: 25%
+
+  # -- How many pods can be unvailable, maximum
+  maxUnavailable: ""
