fix!: enable PDB with autoscaling
BREAKING CHANGE: This upgrades the API version of the HorizontalPodAutoscaler
to autoscaling/v2, which is GA with 1.23.

--- a/charts/generic/ci/pdb-minAvailable-values.yaml
+++ b/charts/generic/ci/pdb-minAvailable-values.yaml
@@ -1,5 +1,9 @@
-replicaCount: 2
+replicaCount: 1
 
 podDisruptionBudget:
   enabled: true
   minAvailable: 50%
+
+autoscaling:
+  enabled: true
+  minReplicas: 2
