feat: add support for additional yaml objects in generic chart
fix #320

--- a/charts/generic/values.yaml
+++ b/charts/generic/values.yaml
@@ -208,3 +208,6 @@ podDisruptionBudget:
 
   # -- How many pods can be unvailable, maximum
   maxUnavailable: ""
+
+# -- Additional API resources to deploy
+additionalObjects: []
