ci: only run helm docs on repo-internal PRs.

--- a/.github/workflows/renovate-config-validator.yml
+++ b/.github/workflows/renovate-config-validator.yml
@@ -6,8 +6,7 @@ on:
       - renovate.json
 
 jobs:
-  validate:
-    name: Validate renovate config
+  renovate-validate:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
