--- a/.github/workflows/helm-docs.yml
+++ b/.github/workflows/helm-docs.yml
@@ -1,13 +1,23 @@
 name: Helm Docs
 
 on:
-  pull_request:
+  push:
+    branches:
+      - renovate/**
+
+permissions:
+  contents: write
 
 jobs:
   helm-docs:
     runs-on: ubuntu-latest
+    # Only run this for PRs from the charts repo itself (to auto-update docs for renovate PRs)
+    # For PRs made by humans, running pre-commit locally is required.
+    if: ${{ github.event.repository.name == "charts" }}
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
+        with:
+          ref: ${{ github.head_ref }}
 
       - uses: actions/setup-go@fac708d6674e30b6ba41289acaab6d4b75aa0753 # v4
         with:
