ci: always run helm-docs on PR

--- a/.github/workflows/helm-docs-skip.yml
+++ b/.github/workflows/helm-docs-skip.yml
@@ -1,12 +1,11 @@
 name: Helm Docs - Skip
 
 on:
-  push:
-    branches-ignore:
-      - renovate/**
+  pull_request:
 
 jobs:
   helm-docs:
     runs-on: ubuntu-latest
+    if: ${{ github.event.repository.name != 'charts' }}
     steps:
       - run: echo "Not a renovate PR, nothing to do"
