--- a/.github/workflows/helm-docs.yml
+++ b/.github/workflows/helm-docs.yml
@@ -1,9 +1,7 @@
 name: Helm Docs
 
 on:
-  push:
-    branches:
-      - renovate/**
+  pull_request:
 
 permissions:
   contents: write
@@ -13,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     # Only run this for PRs from the charts repo itself (to auto-update docs for renovate PRs)
     # For PRs made by humans, running pre-commit locally is required.
-    if: ${{ github.event.repository.name == "charts" }}
+    if: ${{ github.event.repository.name == 'charts' }}
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3
         with:
