ci: do not checkout head ref for fork PRs, check against target of PR

--- a/.github/workflows/helm-docs-skip.yml
+++ b/.github/workflows/helm-docs-skip.yml
@@ -6,6 +6,6 @@ on:
 jobs:
   helm-docs:
     runs-on: ubuntu-latest
-    if: ${{ github.event.repository.name != 'charts' }}
+    if: ${{ github.event.pull_request.head.repo.full_name != 'morremeyer/charts' }}
     steps:
       - run: echo "Not a renovate PR, nothing to do"
