chore: fix renovate python version extraction, 2nd edition

--- a/renovate.json
+++ b/renovate.json
@@ -47,7 +47,7 @@
     {
       "matchDatasources": ["github-tags"],
       "matchPackageNames": ["python/cpython"],
-      "extractVersion": "^(?<version>.*)$"
+      "extractVersion": "^v(?<version>.*)$"
     }
   ],
   "regexManagers": [
