chore: bump major version for all charts to alert to repository move.
This is the last commit for this repository.
Please migrate to github.com/community-tooling/charts.

--- a/charts/cronjob/Chart.yaml
+++ b/charts/cronjob/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: cronjob
-description: Run jobs on a schedule
+description: Please migrate to github.com/community-tooling/charts
 type: application
-version: 3.1.4
+version: 4.0.0
 maintainers:
   - name: morremeyer
   - name: ekeih
