--- a/charts/generic/Chart.yaml
+++ b/charts/generic/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: generic
-description: A chart for generic applications. Use this if you need to deploy something without wanting to build a fully fledged new helm chart.
+description: Please migrate to github.com/community-tooling/charts
 type: application
-version: 7.2.1
+version: 8.0.0
 maintainers:
   - name: morremeyer
   - name: ekeih
