--- a/charts/znc/Chart.yaml
+++ b/charts/znc/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: znc
-description: Installs ZNC (an IRC bouncer) to your cluster
+description: Please migrate to github.com/community-tooling/charts
 type: application
-version: 1.0.2
+version: 2.0.0
 maintainers:
   - name: morremeyer
     email: charts@mor.re
