--- a/charts/backup/Chart.yaml
+++ b/charts/backup/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: backup
-description: Chart to back up PVCs with restic and regularly clean up the snapshots.
+description: Please migrate to github.com/community-tooling/charts
 type: application
-version: 3.2.2
+version: 4.0.0
 maintainers:
   - name: morremeyer
   - name: ekeih
