--- a/charts/mailtrain/Chart.yaml
+++ b/charts/mailtrain/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: mailtrain
-description: Runs mailtrain in your kubernetes cluster
+description: Please migrate to github.com/community-tooling/charts
 type: application
-version: 2.0.0
+version: 3.0.0
 maintainers:
   - name: morremeyer
