--- a/charts/namespaces/Chart.yaml
+++ b/charts/namespaces/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: namespaces
-description: Deploy namespaces with (default) networkpolicies
+description: Please migrate to github.com/community-tooling/charts
 type: application
-version: 3.1.1
+version: 4.0.0
 maintainers:
   - name: morremeyer
     email: charts@mor.re
